# AlphaRadar

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: package.json
apps/api/src/: index.ts
apps/web/: package.json  tsconfig.json
apps/web/app/: auto-refresh.tsx  globals.css  hot-alert.tsx  layout.tsx  page.tsx  trading-tools.tsx
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/api/: routes.py
backend/app/domain/: __init__.py  engine.py
backend/app/services/: radar.py
docs/: alpha-radar-spec-v0.2.md
